--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,30 +30,33 @@
 }
 
 .hmb-header {
+  align-items: center;
+  box-sizing: border-box;
   display: flex;
-  position: absolute;
-  top: 0;
   flex-wrap: nowrap;
-  z-index: 3;
-  transition: height 250ms;
-  margin: 0px;
-  padding: 0;
-  width: 100%;
   height: 75px;
-  text-align: center;
   justify-content: flex-start;
+  margin: 0px;
   padding: 0px 0.5rem;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  transition-behavior: normal;
+  transition-delay: 0s;
+  transition: height 250ms;
+  width: 100%;
+  z-index: 3;
 
-  .header-container {
+  #header-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: inherit;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 0 1.5rem;
-    margin: 0px;
+    padding: 0 calc(1.5rem * .5);
     box-sizing: border-box;
     text-align: center;
+    margin: 0 auto;
   }
 
   .hmb-info-icon {
@@ -120,7 +123,6 @@
       flex-wrap: nowrap;
       justify-content: space-around;
       width: 95%;
-      height: 96px;
       text-align: center;
     }
 
@@ -224,7 +226,7 @@
     transition:
       font-size 225ms ease-in,
       letter-spacing 225ms ease-in;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
 
 
     letter-spacing: 3px;
@@ -232,7 +234,7 @@
 
   .hmb-headerButtonContainer:hover a::after {
     transition: width 300ms ease-out;
-    width: 100%;
+    width: 85%;
   }
 
   canvas {
@@ -255,6 +257,7 @@
   padding-left: calc(var(--bs-gutter-x) * 0.25);
   height: 96%;
   max-height: 96px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -271,7 +274,7 @@
   height: 100%;
   color: #ffffff;
   font-weight: 200;
-  font-size: 1.25em;
+  font-size: 1.15em;
   line-height: 96px;
   letter-spacing: 2px;
   text-decoration: none;
@@ -287,7 +290,7 @@
 .hmb-navLinkActive {
   @extend .hmb-navLink;
   color: var(--HMB-orange);
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   text-shadow: 0 1px 5px #000000;
   text-decoration: none;
   transition: color 3s ease-out;
@@ -295,7 +298,7 @@
 }
 
 .hmb-navLinkActive::after {
-  width: 100% !important;
+  width: 85% !important;
   transform: scale(1);
   opacity: 1 !important;
 }
