--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -49,6 +49,14 @@
   text-transform: uppercase;
 }
 
+.hmb-title2 {
+  color: #ffffff;
+  font-weight: normal;
+  font-size: .9em;
+  margin-bottom: .25rem;
+  margin-left: 10px;
+}
+
 .hmb-titleContent {
   display: flex;
   flex-direction: column;
