--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -179,7 +179,8 @@
           box-shadow: 0px 4px 8px #000000;
           border: 1px solid rgb(39, 186, 233);
           border-radius: 5px;
-          background: var(--HB-blue-background);
+          // background: var(--HB-blue-background);
+          background: linear-gradient(-45deg, rgb(0, 32, 48, 0.95), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
           padding: 10px;
           width: 125px;
           min-height: 178px;
@@ -192,13 +193,15 @@
             .hmb-menuBarNavigation {
               cursor: pointer;
               color: #ffffff;
-              // font-weight: bold;
+              font-weight: bold;
               font-size: 1em;
               line-height: 150%;
               letter-spacing: 2px;
-              text-align: right;
+              text-align: left;
               text-decoration: none;
               text-shadow: 1px 1px 1px #000000;
+              width: 100%;
+              display: block;
             }
 
             .hmb-menuBarNavigation:hover {
@@ -278,7 +281,7 @@
   line-height: 96px;
   letter-spacing: 2px;
   text-decoration: none;
-  transition: color 3s ease-out;
+  transition: color 50ms ease-out;
 }
 
 .hmb-linkBox {
@@ -293,7 +296,7 @@
   font-size: 1.4rem;
   text-shadow: 0 1px 5px #000000;
   text-decoration: none;
-  transition: color 3s ease-out;
+  transition: color 50ms ease-out;
   letter-spacing: 3px;
 }
 
