--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -91,16 +91,15 @@
 // ===== Collapsible Panel
 .hmb-collapsiblePanel {
   position: relative;
-  // margin: 0 auto;
-  // padding: 1rem;
   padding-top: 0px;
   width: 100%;
   min-height: 50px !important;
   color: #ffffff;
   font-size: 1em;
   line-height: 150%;
-  border: 1px solid rgba(255, 255, 255, 0.34);
+  border: 1.15px solid rgba(255, 255, 255, 0.4);
   border-bottom: none;
+  border-right-color: #000000;
 
   button {
     border: none;
@@ -114,7 +113,7 @@
   .hmb-headerGrid {
     display: grid;
     grid-template-columns: 10fr 1fr;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1.15px solid #000000;
     width: 100%;
     padding-bottom: 10px;
 
@@ -136,7 +135,6 @@
 
   .hmb-collapsibleContainer {
     transition: height 0.25s ease-in-out;
-    // margin-top: 15px;
     height: auto;
     height: calc-size(auto, size);
     overflow-y: hidden;
