--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, sans-serif;
-  color: oklch(1 0 0);
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #ffffff;
+    background-color: #000;
 }
