Added hmb where needed

--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -101,7 +101,16 @@
   border-bottom: none;
   border-right-color: #000000;
 
-  button {
+  // button {
+  //   border: none;
+  //   background: none;
+  //   padding-top: 15px;
+  //   color: #ffffff;
+  //   width: 100%;
+  //   padding-right: 0px;
+  // }
+
+  .hmb-button {
     border: none;
     background: none;
     padding-top: 15px;
