--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 :root {
   --HMB-orange: #ffaf19;
+  --HMB-active-orange: #9d6c10;
   --HB-blue-background: linear-gradient(-45deg, rgb(0, 32, 48, 0.95), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
 }
 
