--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -67,22 +67,27 @@ a {
     border-right: 2px solid #ffffff;
     border-left: 2px solid #ffffff;
     border-radius: 15px;
+    border-top: none;
+    border-bottom: none;
     background-color: #00000000;
     height: 20px;
     color: #ffffff;
     font-size: 1.25rem;
     line-height: 10px;
+    transition: all 207ms ease-out;
 
     .hmb-tooltiptext {
       position: absolute;
-      top: -5px;
-      right: 30px;
+      top: -7px;
+      right: 20px;
       visibility: hidden;
+      color: #ffffff;
       opacity: 0;
       z-index: 1;
-      border-radius: 6px;
-      background-color: rgba(0, 92, 138);
-      padding: 7px;
+      border-radius: 7px;
+      background: var(--HB-blue-background);
+      border: 4px solid rgb(0, 31, 84);
+      padding: 9px;
       width: 150px;
       font-size: 1rem;
       text-align: center;
@@ -101,14 +106,22 @@ a {
     opacity: 1;
   }
 
-  .hmb-info-icon .hmb-tooltiptext::after {
+  .hmb-info-icon:active {
+    color: var(--HMB-active-orange);
+    border-right: 2px solid var(--HMB-active-orange);
+    border-left: 2px solid var(--HMB-active-orange);
+  }
+
+  .hmb-tooltiptext:after {
     position: absolute;
-    top: 40%;
-    left: 100%;
-    margin-top: -5px;
-    border-width: 7px;
-    border-style: solid;
-    border-color: transparent transparent transparent rgb(0, 92, 138);
+    top: -3px;
+    right: -3px;
+    bottom: -3px;
+    left: -3px;
+    box-shadow: inset 0 0 2px 1px rgb(39, 186, 233), 0 0 3px 0 rgb(39, 186, 233);
+    border: 1px solid rgb(39, 186, 233);
+    border-radius: 5px;
+    pointer-events: none;
     content: '';
   }
 
