--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -121,6 +121,7 @@
         align-self: flex-end;
         color: #ffffff;
         line-height: 1em;
+        background-color: #000000ab;
       }
 
       .hmb-boldText {
@@ -129,6 +130,7 @@
         font-weight: bold;
         font-size: 1.5em;
         line-height: 1em;
+        background-color: #000000ab;
       }
     }
   }
