--- a/src/components/body/background/background.scss
+++ b/src/components/body/background/background.scss
@@ -22,6 +22,7 @@
     text-align: center;
     margin: 0 auto;
     overflow: hidden;
+    // bottom: -10vh;
 
     #hmb-citWrapper {
       width: 1782px;
