Cleanup added back 2 bluepanels

--- a/src/components/body/background/space/space.scss
+++ b/src/components/body/background/space/space.scss
@@ -1,5 +1,5 @@
 #hmb-satellite {
-  width: 100vw;
+  width: 1782px;
   min-width: 1102px;
   position: absolute;
   max-width: 1782px;
@@ -13,7 +13,7 @@
 }
 
 .hmb-comets {
-  width: 100vw;
+  width: 1782px;
   min-width: 1102px;
   position: absolute;
   //   max-width: 1782px;
