--- a/src/components/body/background/background.scss
+++ b/src/components/body/background/background.scss
@@ -4,6 +4,7 @@
   max-width: 1782px;
   height: 100vh;
   overflow: hidden;
+  justify-content: center;
 
   #hmb-spaceContainer {
     position: relative;
@@ -15,14 +16,12 @@
     min-height: 633px;
     min-width: 1102px;
     width: 100vw;
-    //   border-bottom: 2px solid rgb(39, 186, 233);
     align-self: flex-end;
     display: flex;
-    // justify-content: center;
+    justify-content: center;
     text-align: center;
     margin: 0 auto;
     overflow: hidden;
-    // bottom: -10vh;
 
     #hmb-citWrapper {
       width: 1782px;
@@ -52,7 +51,7 @@
     }
 
     #hmb-towerFlash:after {
-      background: #ffffffda;
+      background: rgb(255 255 233 / 85%);
       width: 50px;
       height: 50px;
       top: -25px;
