--- a/src/components/body/pages/portfolio/Portfolio.scss
+++ b/src/components/body/pages/portfolio/Portfolio.scss
@@ -11,6 +11,7 @@
 
   .hmb-company-name {
     color: #ffffff;
+    text-align: right;
   }
 }
 
@@ -99,6 +100,8 @@
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
+  overflow: hidden;
+  padding: 0 5px;
 }
 
 .hmb-infoHalf {
