--- a/src/components/body/pages/portfolio/Portfolio.scss
+++ b/src/components/body/pages/portfolio/Portfolio.scss
@@ -131,7 +131,7 @@
 
   .hmb-photoHalf {
     width: 100%;
-    justify-content: center;
+    justify-content: flex-end;
   }
 
   .hmb-photoPlacer {
