--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -41,9 +41,9 @@
 }
 
 .hmb-whiteText {
-  -webkit-text-stroke: 0.15px #ffffff;
   letter-spacing: 1.5px;
   padding: 0px 0.25rem;
+  text-shadow: 1px 1px #000000;
 }
 
 #hmb-resume {
