--- a/src/components/body/pages/portfolio/Portfolio.scss
+++ b/src/components/body/pages/portfolio/Portfolio.scss
@@ -107,7 +107,7 @@
 .hmb-infoHalf {
   width: 50%;
   display: inline-block;
-  -webkit-text-stroke: 0.15px #ffffff;
+  padding: 0px;
 }
 
 .hmb-infoDescript {
