--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,7 +26,6 @@ a {
 }
 
 #hmb-headerCanvas {
-  transition: height 125ms ease-in, opacity 125ms ease-in;
   border-bottom-width: 2px;
   border-bottom-style: solid;
   border-bottom-color: rgb(39, 186, 233);
@@ -45,7 +44,7 @@ a {
   top: 0;
   transition-behavior: normal;
   transition-delay: 0s;
-  transition: height 250ms;
+  transition: height 75ms;
   width: 100%;
   z-index: 3;
 
@@ -58,6 +57,8 @@ a {
     padding: 0 calc(1.5rem * .5);
     box-sizing: border-box;
     margin: 0 auto;
+    background-color: #00000096;
+    height: 100%;
   }
 
   .hmb-info-icon {
@@ -127,7 +128,7 @@ a {
   .hmb-headerNavigation {
     display: flex;
     z-index: 1;
-    transition: height 250ms;
+    transition: height 75ms;
     width: 100%;
 
     .hmb-headerButtonsRow {
@@ -174,6 +175,10 @@ a {
         transition: color 100ms linear;
       }
 
+      .hmb-menuBarsClicked {
+        color: var(--HMB-orange);
+      }
+
       #hmb-dropDownContainer {
         position: absolute;
         right: 0px;
@@ -190,7 +195,7 @@ a {
           transition: top 750ms ease-in;
           box-shadow: 0px 4px 8px #000000;
           border: 1px solid rgb(39, 186, 233);
-          border-radius: 5px;
+          border-radius: 0px 0px 5px 5px;
           background: linear-gradient(-45deg, rgb(0, 32, 48, 0.95), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
           padding: 10px;
           width: 125px;
@@ -284,7 +289,6 @@ a {
   background: none;
   padding: 0 4px;
   width: 100%;
-  height: 100%;
   font-weight: 200;
   font-size: 1.15em;
   letter-spacing: 2px;
@@ -296,6 +300,7 @@ a {
   height: 18px;
   align-self: flex-end;
   line-height: 15px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), -1px -1px 1px rgba(0, 0, 0, 0.5)
 }
 
 .hmb-navLinkActive {
