--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -18,7 +18,7 @@
     font-weight: bold;
     font-size: 1.25em;
     text-shadow: 2px 2px 5px #000000;
-    border-radius: 5px;
+    border-radius: 5px 5px 0px 0px;
     letter-spacing: 1px;
     position: relative;
     bottom: 1px;
