--- a/src/components/body/background/space/space.scss
+++ b/src/components/body/background/space/space.scss
@@ -10,16 +10,18 @@
   min-width: 1102px;
   position: absolute;
   max-width: 1782px;
+  min-height: 990px;
 }
 
 .hmb-comets {
   width: 1782px;
   min-width: 1102px;
   position: absolute;
-  //   max-width: 1782px;
+  min-height: 990px;
 }
 
 #hmb-spaceContainer {
   position: relative;
   margin-top: -72px;
+  min-height: 990px;
 }
