--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -44,8 +44,8 @@
 
 .hmb-whiteText {
   letter-spacing: 1px;
-  padding: 0px 0.25rem;
   text-shadow: 1px 1px 1px rgb(0 0 0 / 50%), -1px -1px 1px rgb(0 0 0 / 50%);
+  color: #ffffff;
 }
 
 #hmb-resume {
@@ -105,6 +105,19 @@
     min-height: 50px;
     cursor: pointer;
     font-weight: 600;
+  }
+
+  .hmb-educationLine {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 15px 7px 10px 7px;
+
+    .hmb-eduMajor {
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 1em;
+      text-shadow: 1px 1px 1px #000000;
+    }
   }
 }
 
