--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -5,7 +5,7 @@
   border: 4px solid rgb(0, 31, 84);
   border-radius: 5px;
   background: var(--HB-blue-background);
-  padding: .5rem 0.25rem;
+  padding: .5rem;
   width: 100%;
   min-width: 330px;
   min-height: 178px;
