--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 4px solid rgb(0, 31, 84);
   border-radius: 5px;
-  background: var(--HB-blue-background);
+  background: var(--HMB-blue-background);
   padding: .5rem;
   width: 100%;
   min-width: 330px;
