--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -85,7 +85,7 @@ a {
       opacity: 0;
       z-index: 1;
       border-radius: 7px;
-      background: var(--HB-blue-background);
+      background: var(--HMB-blue-background);
       border: 4px solid rgb(0, 31, 84);
       padding: 9px;
       width: 150px;
@@ -272,8 +272,6 @@ a {
   flex: 1;
   z-index: 1;
   background-size: cover;
-  padding-right: calc(var(--bs-gutter-x) * 0.25);
-  padding-left: calc(var(--bs-gutter-x) * 0.25);
   height: 96%;
   max-height: 96px;
   margin: 0 auto;
