--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -221,6 +221,10 @@ $textShadow: rgb(50, 50, 50);
     justify-content: center;
   }
 
+  #hmb-blue-connect {
+    max-width: 430px;
+  }
+
   .hmb-container {
     display: flex;
     justify-content: center;
