--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -67,7 +67,7 @@
   background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
   font-size: 2em;
-  transition: all 200ms ease-out;
+  transition: all 100ms ease-out;
 }
 
 .hmb-closeBtn:hover {
@@ -128,7 +128,7 @@
 
   .hmb-headerGrid {
     display: grid;
-    grid-template-columns: 10fr 1fr;
+    grid-template-columns: 20fr 1fr;
     border-bottom: 1.15px solid #000000;
     width: 100%;
     padding-bottom: 10px;
@@ -138,8 +138,8 @@
     }
 
     .hmb-close {
-      text-align: right;
-      padding-right: 10px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .hmb-downArrow {
