--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -29,7 +29,7 @@
 // ===== Modal
 .hmb-modalContent {
   position: relative;
-  padding-top: 1rem;
+  padding: 1rem .5rem 0 .5rem;
 }
 
 .hmb-modalTitle {
