--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,3 @@
-/* Reset */
-
-
 a {
   color: #ffffff;
 }
@@ -74,7 +71,6 @@ a {
     color: #ffffff;
     font-size: 1.25rem;
     line-height: 10px;
-    transition: all 207ms ease-out;
 
     .hmb-tooltiptext {
       position: absolute;
@@ -91,7 +87,7 @@ a {
       width: 150px;
       font-size: 1rem;
       text-align: center;
-      transition: opacity 200ms ease-out;
+      // transition: opacity 200ms ease-out;
     }
   }
 
@@ -162,7 +158,7 @@ a {
         justify-content: center;
         float: right;
         z-index: 10;
-        transition: all 200ms linear;
+        transition: all .15s linear;
         cursor: pointer;
         font-size: 1.75em;
       }
@@ -183,20 +179,18 @@ a {
         position: absolute;
         right: 0px;
         z-index: 4;
-        transition: height 200ms linear;
         width: 200px;
         overflow: hidden;
 
         #hmb-dropDown {
           position: absolute;
-          right: 25px;
-          bottom: 7px;
+          right: 46px;
+          bottom: 9px;
           z-index: 10;
-          transition: top 750ms ease-in;
           box-shadow: 0px 4px 8px #000000;
-          border: 1px solid rgb(39, 186, 233);
-          border-radius: 0px 0px 5px 5px;
-          background: linear-gradient(-45deg, rgb(0, 32, 48, 0.95), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
+          border: 2px solid rgb(39, 186, 233);
+          border-radius: 5px;
+          background: #212529;
           padding: 10px;
           width: 125px;
           min-height: 178px;
@@ -209,7 +203,7 @@ a {
             .hmb-menuBarNavigation {
               cursor: pointer;
               color: #ffffff;
-              font-weight: bold;
+              // font-weight: bold;
               font-size: 1em;
               line-height: 150%;
               letter-spacing: 2px;
@@ -218,11 +212,13 @@ a {
               text-shadow: 1px 1px 1px #000000;
               width: 100%;
               display: block;
+              padding-left: 4px;
             }
 
-            .hmb-menuBarNavigation:hover {
-              color: var(--HMB-orange);
+            .hmb-menuBarNavigation-hover:hover {
+              text-decoration: underline;
             }
+
           }
         }
       }
