Fixed dropdown menu selection

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -219,6 +219,10 @@ a {
               text-decoration: underline;
             }
 
+            .hmb-menuBarNavigation-selected {
+              background-color: #eda110;
+              font-weight: bold;
+            }
           }
         }
       }
