--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -32,28 +32,33 @@
   padding: 1rem .5rem 0 .5rem;
 }
 
-.hmb-modalTitle {
-  display: flex;
-  flex-shrink: 0;
-  flex-direction: row;
-  align-items: center;
+.hmb-modalHeader {
   box-shadow: 0px 8px 11px -8px #000000;
   border-bottom: 1px solid #ffffff;
   width: 100%;
+}
+
+.hmb-modalTitle {
+  align-items: center;
   pointer-events: auto;
-  color: var(--HMB-orange) !important;
-  font-weight: bold;
   line-height: 150%;
   text-shadow: 1px 1px 1px #000000;
   text-transform: uppercase;
-}
 
-.hmb-title2 {
-  color: #ffffff;
-  font-weight: normal;
-  font-size: .9em;
-  margin-bottom: .25rem;
-  margin-left: 10px;
+  .hmb-title {
+    display: inline-block;
+    color: var(--HMB-orange) !important;
+  }
+
+  .hmb-titleSmall {
+    font-size: .9em;
+    margin-left: 10px;
+  }
+
+  .hmb-title2 {
+    display: inline-block;
+    margin-left: 10px;
+  }
 }
 
 .hmb-titleContent {
@@ -159,6 +164,7 @@
 
   .hmb-collapsibleContainer {
     transition: height 0.3s ease-in-out;
+    -webkit-transition: height 0.3s ease-in-out;
     height: auto;
     height: calc-size(auto, size);
     overflow-y: hidden;
