--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,10 @@ body {
   min-height: 633px;
 }
 
+#siteInformation {
+  padding-left: 1.25rem;
+}
+
 #hmb-pageContainer {
   position: absolute;
   z-index: 2;
