--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
-  padding: 20px;
+  padding: 1.5%;
   align-content: flex-start;
   gap: 20px;
   align-items: flex-start;
@@ -43,6 +43,7 @@
 
 .hmb-sectionHeader-Line {
   @extend .hmb-sectionHeader;
+  letter-spacing: 1.5px;
   border-bottom: 1px solid #ffffff;
   box-shadow: 0px 8px 11px -8px #000000;
   text-shadow: 1px 1px 1px #000000;
