--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -38,7 +38,8 @@
   text-transform: uppercase;
   font-weight: 700;
   margin-bottom: 16px;
-  line-height: 1.5rem
+  line-height: 1.5rem;
+  font-size: 1.063rem;
 }
 
 .hmb-sectionHeader-Line {
